--- a/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSSAbsolutePag80_/CSSAbsolutePag80.html
+++ b/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSSAbsolutePag80_/CSSAbsolutePag80.html
@@ -28,3 +28,4 @@
 
         <div style="position: absolute; width:100px;height: 20px;padding:10px;background-color: #ddf;bottom: 10px;right: 10px;">Posicionamiento absoluto con atributos bottom y right</div>
     </body>
+</html>
