--- a/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSSAbsolutePag80_/CSSRelativePag82.html
+++ b/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSSAbsolutePag80_/CSSRelativePag82.html
@@ -22,9 +22,10 @@
             No define posicion , por lo que es static
         </div>
 
-        <div style="position: relative; width: 300px; padding: 10px; background-color: #066; color:#ffc; top:100px; left:30px;">Capa de posicionamiento relative <br />Se tiene en cuenta esta capa para posicionar las siguientes</div> 
+        <div style="position: relative; width: 300px; padding: 10px; background-color: #066; color:#ffc; /*top:100px;*/ left:30px;">Capa de posicionamiento relative <br />Se tiene en cuenta esta capa para posicionar las siguientes</div> 
 
         <h2>La ultima en ponerse</h2>
 
     </body>
 </html>
+
