DAW 2016 Clase : 1 Subir archivos desde otros directorios

--- a/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSS_Ejemplo/T2CrearVincularHojasDeEstiloCascadaExterna.html
+++ b/_DAW_2016_Clase/public_html/DIW_Clase/T2UsoDeEstilos/CSS_Ejemplo/T2CrearVincularHojasDeEstiloCascadaExterna.html
@@ -1,5 +1,5 @@
 <!-- 
-    @Created on : 24-oct-2016, 8:51:53
+    @Created on : 25-oct-2016, 8:50:26
     @Author     : admin
     @Pag        :
     @version    :
@@ -12,18 +12,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="">
+        <style>
+            @import url("estilo.css");
+            @import url("impresora.css")print;
+            @import url("normal.css")screen;
+        </style>
     </head>
     <body>
         <script>
-
-            aa = 3;
-
-            var codigo_productos = new Array();
-            for (var i = 0; i < 10; i++) {
-                codigo_productos[i] = "Codigo_producto : " + i;
-                document.write("<hr>" + codigo_productos[i]);
-
-            }
 
         </script>
     </body>
