--- a/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4xArrays/T4xEjerciciosProfesor/T4xEj1ArraysIntercalarArrays.html
+++ b/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4xArrays/T4xEjerciciosProfesor/T4xEj1ArraysIntercalarArrays.html
@@ -29,9 +29,16 @@
             }
 
             var longitud = numeros.length + cadena.length;
-            document.write("<br><br>• Longitud : " + longitud);
-            
-            
+            document.write("<br><br>• Longitud : " + longitud + "<br>" + "<br>");
+
+            var unir = new Array();
+            unir = numeros.concat(cadena);
+
+            document.write("• Cadena unida: <br><br>");
+            for (var i = 0; i < unir.length; i++) {
+                document.write(unir[i]);
+            }
+
 
 
 
