--- a/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4xArrays/T4xEjerciciosProfesor/T4xEj3ArraysAscendente3arrays.html
+++ b/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4xArrays/T4xEjerciciosProfesor/T4xEj3ArraysAscendente3arrays.html
@@ -3,7 +3,8 @@
     @Author     : admin
     @Pag        :
     @version    :
-    @TODO       : Dados 2 vectortes intercalar en un tercero
+    @TODO       : Partiendo de 2 vectores clasificados en orden ascendente , debemos conseguir un 
+                  tercero que incluyan el contenido de los clasificados ascesdentemente.
 -->
 <!DOCTYPE html>
 <html>
@@ -24,7 +25,7 @@
                 var num = numeros[i] = i;
                 document.write(num);
             }
-
+            document.write("<br>1- Longitud : " + num);
             document.write("<hr>");
 
             var numeros1 = new Array(r1);
@@ -33,7 +34,7 @@
                 document.write(num1);
             }
 
-
+            document.write("<br>2- Longitud : " + num1);
             document.write("<hr>");
 //            Unir las cadenas
             var numeros_longitud = numeros.length;
@@ -50,25 +51,19 @@
             var numeros2 = new Array(r);
             var numeros2 = numeros.concat(numeros1);
 
-            document.write("3 Array<br>");
-            var nu = new Array(numeros2.length);
-            for (var i = 0; i < nu.length; i++) {
-                nu[i] = numeros2[i];
-                document.write(nu[i]);
-            }
 
-            document.write('<hr>');
-            document.write('Ordenar array final : ');
-            document.write('<br>Longitud total : array final : ' + nu.length);
-            document.write('<br>');
-            nu.sort();
-
-            var array_ordenado = new Array();
-            for (var i = 0; i < nu.length; i++) {
-                array_ordenado[i] = nu[i];
-                document.write(array_ordenado[i]);
-                document.write('-');
+            for (var i = 0; i < longitud_total; i++) {
+                var nu = numeros2[i];
+                document.write(" ");
+                document.write(nu);
             }
+            
+            document.write("<hr> Ordenar array final");
+            var numeros3 = new Array(r);
+
+            
+
+
 
 
 
