DAW 2016 DWEC Ejercicios JS T4 6º

--- a/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4ObjetoClases/T4ObjetosBasicosUsoThis.html
+++ b/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4ObjetoClases/T4ObjetosBasicosUsoThis.html
@@ -45,6 +45,13 @@
 
 // 
 //            function imprime
+            function imprieDatos() {
+                document.write(document.write('<br>Marca : ' + this.marca));
+                document.write(document.write('<br>Modelo: ' + this.modelo));
+                document.write(document.write('<br>Anio: ' + this.anyo));
+            }
+            
+            
 
         </script>
     </body>
