--- a/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4ObjetoClases/T4_Ejercicios_del_profesor/AlumnosPorEdu.html
+++ b/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T4FuncionesArraysObjetos/T4ObjetoClases/T4_Ejercicios_del_profesor/AlumnosPorEdu.html
@@ -51,7 +51,7 @@
                     return 1;
                 }
                 return 0;
-            })
+            });
 
             alert(
                     "Ordenar por nombre:\n" +
@@ -62,7 +62,7 @@
 
 
             alumnos.sort(function (a, b) {
-                return a.edad - b.edad
+                return a.edad - b.edad;
             });
             alert(
                     "Ordenar por edad:\n" +
@@ -75,7 +75,7 @@
 
 
             alumnos.sort(function (a, b) {
-                return a.telefono - b.telefono
+                return a.telefono - b.telefono;
             });
             alert(
                     "Ordenar por telefono:\n" +
