--- a/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T5Eventos/T5_Raton/T5_Raton_onMouseOver.html
+++ b/_DAW_2016_Clase/public_html/DWEC_Clase/DWEC_Libro_Rama/T5Eventos/T5_Raton/T5_Raton_onMouseOver.html
@@ -12,6 +12,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="">
+    <style>
+      img{
+        background-color: #cc3300;
+        border: 10px;
+        padding: 10px;
+        margin: auto;
+        margin-left: 500px;
+        margin-left: 110px;
+      }
+    </style>
   </head>
   <body>
     <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="../img/g.jpeg" alt="smiley" width="32" height="32">
@@ -26,8 +36,8 @@
       }
 
       function normalImg(x) {
-        x.style.height = "5px";
-        x.style.width = "5px";
+        x.style.height = "15px";
+        x.style.width = "15px";
       }
     </script>
 
